styling changes to stop body getting squashed

--- a/src/root.css
+++ b/src/root.css
@@ -5,6 +5,4 @@
 
 .body {
     width : 100%;
-    height : 420px;
-    text-align: center;   
 }
